--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ html{
     font-size: 62.5%;
     font-family: "DM Sans", sans-serif;
 }
+a{
+    text-decoration: none;
+}
 header{
     position: relative;
     display: flex;
@@ -38,6 +41,7 @@ header{
     min-width: 320px;
     height: 334px;
     text-align: center;
+    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
 }
 header img{
     width: 150px;
@@ -53,4 +57,37 @@ header img{
     margin-top: 40px;
     text-align: center;
     align-self: center;
+}
+.header--title-container h1{
+    color: var(--just-white);
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+}
+.header--title-container p{
+    color: var(--soft-orange);
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+}
+.header--button{
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: var(--warm-black);
+}
+.header--title-container .header--button {
+    position: absolute;
+    left: calc(50% - 130px);
+    top: 270px;
+    display:block;
+    margin-top: 35px;
+    padding: 15px;
+    width: 229px;
+    /*height: 48px;*/
+    background-color: var(--off-white);
+    border-radius: 4px;
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+}
+span{
+    margin-left: 10px;
 }
